# mlir-sys

./: .gitignore  Cargo.toml  README.md  build.rs  cspell.json  flake.nix  wrapper.h
.github/actions/setup/: action.yaml
.github/workflows/: release.yaml  test.yaml
tools/: setup.sh
