[package]
name = "mlir-sys"
version = "0.5.0"
authors = ["McCoy R. Becker", "Yota Toyama", "Edgar Luque"]
keywords = ["mlir", "llvm"]
categories = ["external-ffi-bindings"]
edition = "2024"
description = "Rust bindings to the MLIR C API."
repository = "https://github.com/mlir-rs/mlir-sys"
readme = "README.md"
links = "MLIR"
license-file = "LICENSE"

[features]
bundled = ["dep:reqwest", "dep:liblzma", "dep:tar", "dep:bytes"]

[build-dependencies]
bindgen = "0.71.1"
reqwest = { version = "0.12.15", features = [ "blocking", "default-tls", "http2" ], default-features = false, optional = true}
liblzma = { version = "0.4.1", features = ["static", "parallel"], optional = true }
tar = { version = "0.4", optional = true}
bytes = { version = "1.10", optional = true }
