[package]
name = "mlir-sys"
version = "0.5.0"
authors = ["McCoy R. Becker", "Yota Toyama", "Edgar Luque"]
keywords = ["mlir", "llvm"]
categories = ["external-ffi-bindings"]
edition = "2024"
description = "Rust bindings to the MLIR C API."
repository = "https://github.com/mlir-rs/mlir-sys"
readme = "README.md"
links = "MLIR"
license-file = "LICENSE"

[build-dependencies]
bindgen = "0.72.0"
