[package]
name = "mlir-sys"
version = "220.0.1"
authors = ["McCoy R. Becker", "Yota Toyama", "Edgar Luque"]
keywords = ["llvm", "mlir"]
categories = ["external-ffi-bindings"]
edition = "2024"
description = "Rust bindings to the MLIR C API."
repository = "https://github.com/mlir-rs/mlir-sys"
readme = "README.md"
links = "MLIR"
license-file = "LICENSE"

[features]
no-version-check = []

[build-dependencies]
bindgen = "0.72.1"
